force-app/main/default/objects/Contact/fields/JU_HearingOfCompetitorInformation__c.field-meta.xml
<CustomField>
    <fullName>JU_HearingOfCompetitorInformation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>競合先情報のヒアリング可能</label>
    <type>Checkbox</type>
</CustomField>