force-app/main/default/objects/Contact/fields/JU_InquiriesAndInquiries__c.field-meta.xml
<CustomField>
    <fullName>JU_InquiriesAndInquiries__c</fullName>
    <defaultValue>false</defaultValue>
    <label>先方からの引き合い・問合せ有り</label>
    <type>Checkbox</type>
</CustomField>