force-app/main/default/objects/Contact/fields/JU_InterviewMeeting__c.field-meta.xml
<CustomField>
    <fullName>JU_InterviewMeeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>面談打合せ実施</label>
    <type>Checkbox</type>
</CustomField>