force-app/main/default/objects/Contact/fields/JU_IntroducingOtherDepartments__c.field-meta.xml
<CustomField>
    <fullName>JU_IntroducingOtherDepartments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>他部門の紹介可能</label>
    <type>Checkbox</type>
</CustomField>