force-app/main/default/objects/Contact/fields/JU_Job__c.field-meta.xml
<CustomField>
    <fullName>JU_Job__c</fullName>
    <label>職歴</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>新卒</fullName>
            </value>
            <value>
                <fullName>中途</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>