force-app/main/default/objects/Contact/fields/JU_Keyman__c.field-meta.xml
<CustomField>
    <fullName>JU_Keyman__c</fullName>
    <label>キーマン_JU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>