force-app/main/default/objects/Contact/fields/JU_kyu_tokuisakitanntousyasyoyuusya__c.field-meta.xml
<CustomField>
    <fullName>JU_kyu_tokuisakitanntousyasyoyuusya__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ユーザ</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ggggggg</relationshipName>
    <type>Lookup</type>
</CustomField>