force-app/main/default/objects/Contact/fields/JU_LastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>JU_LastModifiedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>最終更新者 ID_JU</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CThxZV</relationshipName>
    <type>Lookup</type>
</CustomField>