force-app/main/default/objects/Contact/fields/JU_LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>JU_LastModifiedDate__c</fullName>
    <label>最終更新日_JU</label>
    <type>DateTime</type>
</CustomField>