force-app/main/default/objects/Contact/fields/JU_LastVisitDay__c.field-meta.xml
<CustomField>
    <fullName>JU_LastVisitDay__c</fullName>
    <label>最終訪問日</label>
    <type>Date</type>
</CustomField>