force-app/main/default/objects/Contact/fields/JU_Memo__c.field-meta.xml
<CustomField>
    <fullName>JU_Memo__c</fullName>
    <label>特記事項_JU</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>