force-app/main/default/objects/Contact/fields/JU_MyChargeFlg__c.field-meta.xml
<CustomField>
    <fullName>JU_MyChargeFlg__c</fullName>
    <formula>IF( $User.Id = JU_OwnerId__r.Id ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*私の担当先Flg_JU</label>
    <type>Checkbox</type>
</CustomField>