force-app/main/default/objects/Contact/fields/JU_MyDepartmentFlg__c.field-meta.xml
<CustomField>
    <fullName>JU_MyDepartmentFlg__c</fullName>
    <formula>IF( $User.Department= JU_Department__c ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*私の部署Flg_JU</label>
    <type>Checkbox</type>
</CustomField>