force-app/main/default/objects/Contact/fields/JU_nagatatuushin_checkday__c.field-meta.xml
<CustomField>
    <fullName>JU_nagatatuushin_checkday__c</fullName>
    <label>永田通信配信チェック日</label>
    <type>Date</type>
</CustomField>