force-app/main/default/objects/Contact/fields/JU_nagatatuushin_taisyou__c.field-meta.xml
<CustomField>
    <fullName>JU_nagatatuushin_taisyou__c</fullName>
    <defaultValue>false</defaultValue>
    <label>永田通信配信対象</label>
    <type>Checkbox</type>
</CustomField>