force-app/main/default/objects/Contact/fields/JU_O_WhitePaperDL1__c.field-meta.xml
<CustomField>
    <fullName>JU_O_WhitePaperDL1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>O:ホワイトペーパーDL1_JU</label>
    <type>Checkbox</type>
</CustomField>