force-app/main/default/objects/Contact/fields/JU_PastDepartment__c.field-meta.xml
<CustomField>
    <fullName>JU_PastDepartment__c</fullName>
    <label>過去所属部署_JU</label>
    <type>TextArea</type>
</CustomField>