force-app/main/default/objects/Contact/fields/JU_Personality__c.field-meta.xml
<CustomField>
    <fullName>JU_Personality__c</fullName>
    <label>性格</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ポジティブ</fullName>
            </value>
            <value>
                <fullName>ネガティブ</fullName>
            </value>
            <value>
                <fullName>オープン</fullName>
            </value>
            <value>
                <fullName>閉鎖的</fullName>
            </value>
            <value>
                <fullName>保守的</fullName>
            </value>
            <value>
                <fullName>先進的</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>