force-app/main/default/objects/Contact/fields/JU_RelationshipDegree__c.field-meta.xml
<CustomField>
    <fullName>JU_RelationshipDegree__c</fullName>
    <label>関係構築度_JU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>初期レベル</fullName>
            </value>
            <value>
                <fullName>中期レベル</fullName>
            </value>
            <value>
                <fullName>後期レベル</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>