force-app/main/default/objects/Contact/fields/JU_RelationshipDegreePic__c.field-meta.xml
<CustomField>
    <fullName>JU_RelationshipDegreePic__c</fullName>
    <formula>CASE(  JU_RelationshipDegree__c ,
&apos;初期レベル&apos;, 
IMAGE(&quot;https://forcecom175--c.visualforce.com/resource/1665746841000/RelationshipDegreeJU_Lv1?&quot;, &quot;&quot;,38, 690) ,
&apos;中期レベル&apos;, 
IMAGE(&quot;https://forcecom175--c.visualforce.com/resource/1665746859000/RelationshipDegreeJU_Lv2?&quot;, &quot;&quot;,38, 690) ,
&apos;後期レベル&apos;, 
IMAGE(&quot;https://forcecom175--c.visualforce.com/resource/1665746880000/RelationshipDegreeJU_Lv3?&quot;, &quot;&quot;,38, 690) ,
&apos;&apos;, 
IMAGE(&quot;https://forcecom175--c.visualforce.com/resource/1665746817000/RelationshipDegreeJU_Lv0?&quot;, &quot;&quot;,38, 690) ,
&apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>関係構築度画像_JU</label>
    <type>Text</type>
</CustomField>