force-app/main/default/objects/Contact/fields/JU_shinsenryakukeyman__c.field-meta.xml
<CustomField>
    <fullName>JU_shinsenryakukeyman__c</fullName>
    <defaultValue>false</defaultValue>
    <label>新戦略キーマン</label>
    <type>Checkbox</type>
</CustomField>