force-app/main/default/objects/Contact/fields/ju_syokihanteibi__c.field-meta.xml
<CustomField>
    <fullName>ju_syokihanteibi__c</fullName>
    <label>初期レベル判定日</label>
    <type>Date</type>
</CustomField>