force-app/main/default/objects/Contact/fields/JU_syokusyu__c.field-meta.xml
<CustomField>
    <fullName>JU_syokusyu__c</fullName>
    <label>職種</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>設計</fullName>
            </value>
            <value>
                <fullName>積算</fullName>
            </value>
            <value>
                <fullName>工事</fullName>
            </value>
            <value>
                <fullName>購買</fullName>
            </value>
            <value>
                <fullName>商品開発</fullName>
            </value>
            <value>
                <fullName>経営</fullName>
            </value>
            <value>
                <fullName>営業</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>