force-app/main/default/objects/Contact/fields/Ju_teitai__c.field-meta.xml
<CustomField>
    <fullName>Ju_teitai__c</fullName>
    <formula>today()- JU_LastVisitDay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>停滞日数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>