force-app/main/default/objects/Contact/fields/ju_tyuukihanteibi__c.field-meta.xml
<CustomField>
    <fullName>ju_tyuukihanteibi__c</fullName>
    <label>中期レベル判定日</label>
    <type>Date</type>
</CustomField>