force-app/main/default/objects/Contact/fields/KenzaiCOwner__c.field-meta.xml
<CustomField>
    <fullName>KenzaiCOwner__c</fullName>
    <label>建材C営業担当者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>