force-app/main/default/objects/Contact/fields/KeyMan__c.field-meta.xml
<CustomField>
    <fullName>KeyMan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>キーマン</label>
    <type>Checkbox</type>
</CustomField>