force-app/main/default/objects/Contact/fields/KeymanMemo__c.field-meta.xml
<CustomField>
    <fullName>KeymanMemo__c</fullName>
    <label>キーマン備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>