force-app/main/default/objects/Contact/fields/lastAnsweredSurveyName__c.field-meta.xml
<CustomField>
    <fullName>lastAnsweredSurveyName__c</fullName>
    <label>最終回答アンケート名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>