force-app/main/default/objects/Contact/fields/LeadSource__c.field-meta.xml
<CustomField>
    <fullName>LeadSource__c</fullName>
    <label>リードソース</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HotProfile</fullName>
            </value>
            <value>
                <fullName>紹介</fullName>
            </value>
            <value>
                <fullName>キーマン紹介</fullName>
            </value>
            <value>
                <fullName>Eight</fullName>
            </value>
            <value>
                <fullName>チャンピオン</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>