force-app/main/default/objects/Contact/fields/Maincounter__c.field-meta.xml
<CustomField>
    <fullName>Maincounter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>主窓口</label>
    <type>Checkbox</type>
</CustomField>