force-app/main/default/objects/Contact/fields/Matterport_kouritsuka__c.field-meta.xml
<CustomField>
    <fullName>Matterport_kouritsuka__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MP資料DL_効率化</label>
    <type>Checkbox</type>
</CustomField>