force-app/main/default/objects/Contact/fields/Matterport_nani__c.field-meta.xml
<CustomField>
    <fullName>Matterport_nani__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MP資料DL_Matterportって何？</label>
    <type>Checkbox</type>
</CustomField>