force-app/main/default/objects/Contact/fields/Matterport_tsukaikonasou__c.field-meta.xml
<CustomField>
    <fullName>Matterport_tsukaikonasou__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MP資料DL_公式アドオン機能で使いこなそう</label>
    <type>Checkbox</type>
</CustomField>