force-app/main/default/objects/Contact/fields/Matterport_tsukaikonasou_date__c.field-meta.xml
<CustomField>
    <fullName>Matterport_tsukaikonasou_date__c</fullName>
    <label>MP資料DL_公式アドオン機能で使いこなそう_日付</label>
    <type>Date</type>
</CustomField>