force-app/main/default/objects/Contact/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <label>特記事項</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>