force-app/main/default/objects/Contact/fields/mobilizer__c.field-meta.xml
<CustomField>
    <fullName>mobilizer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>モビライザー</label>
    <type>Checkbox</type>
</CustomField>