force-app/main/default/objects/Contact/fields/MT_CreatedById__c.field-meta.xml
<CustomField>
    <fullName>MT_CreatedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>個社別管理開始ユーザ_MT</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AChx88_vsa</relationshipName>
    <type>Lookup</type>
</CustomField>