force-app/main/default/objects/Contact/fields/MT_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>MT_CreatedDate__c</fullName>
    <label>個社別管理開始日_MT</label>
    <type>DateTime</type>
</CustomField>