force-app/main/default/objects/Contact/fields/MT_Department__c.field-meta.xml
<CustomField>
    <fullName>MT_Department__c</fullName>
    <label>担当部署_MT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>