force-app/main/default/objects/Contact/fields/MT_OwnerId__c.field-meta.xml
<CustomField>
    <fullName>MT_OwnerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>得意先担当者 所有者_MT</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CThqTB_5jf</relationshipName>
    <type>Lookup</type>
</CustomField>