force-app/main/default/objects/Contact/fields/MyDeprtmentFlg__c.field-meta.xml
<CustomField>
    <fullName>MyDeprtmentFlg__c</fullName>
    <description>閲覧ユーザの部署とレコードの部署が一致する場合True</description>
    <formula>IF( $User.Department= Department__c ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*私の部署Flg</label>
    <type>Checkbox</type>
</CustomField>