force-app/main/default/objects/Contact/fields/Name_Kana__c.field-meta.xml
<CustomField>
    <fullName>Name_Kana__c</fullName>
    <label>姓名(カナ)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>