force-app/main/default/objects/Contact/fields/NT_Details__c.field-meta.xml
<CustomField>
    <fullName>NT_Details__c</fullName>
    <label>詳細内容</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>