force-app/main/default/objects/Contact/fields/NT_ownerText__c.field-meta.xml
<CustomField>
    <fullName>NT_ownerText__c</fullName>
    <label>主担当者_テキスト</label>
    <length>255</length>
    <type>Text</type>
</CustomField>