force-app/main/default/objects/Contact/fields/NumManagementMail__c.field-meta.xml
<CustomField>
    <fullName>NumManagementMail__c</fullName>
    <label>管理者宛メール番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>