force-app/main/default/objects/Contact/fields/OLDCW_RelationshipDegree__c.field-meta.xml
<CustomField>
    <fullName>OLDCW_RelationshipDegree__c</fullName>
    <label>元の値_CW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>