force-app/main/default/objects/Contact/fields/optOutCalling_Ju__c.field-meta.xml
<CustomField>
    <fullName>optOutCalling_Ju__c</fullName>
    <defaultValue>false</defaultValue>
    <label>住環境架電拒否</label>
    <type>Checkbox</type>
</CustomField>