force-app/main/default/objects/Contact/fields/optOutCalling_St__c.field-meta.xml
<CustomField>
    <fullName>optOutCalling_St__c</fullName>
    <defaultValue>false</defaultValue>
    <label>スチール架電拒否</label>
    <type>Checkbox</type>
</CustomField>