force-app/main/default/objects/Contact/fields/optOutDm_BuildApp__c.field-meta.xml
<CustomField>
    <fullName>optOutDm_BuildApp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BuildAppDM拒否</label>
    <type>Checkbox</type>
</CustomField>