force-app/main/default/objects/Contact/fields/optOutDm_En__c.field-meta.xml
<CustomField>
    <fullName>optOutDm_En__c</fullName>
    <defaultValue>false</defaultValue>
    <label>エンジDM拒否</label>
    <type>Checkbox</type>
</CustomField>