force-app/main/default/objects/Contact/fields/optOutDm_Sl__c.field-meta.xml
<CustomField>
    <fullName>optOutDm_Sl__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ソリューション営業課DM拒否</label>
    <type>Checkbox</type>
</CustomField>