force-app/main/default/objects/Contact/fields/optOutDm_St__c.field-meta.xml
<CustomField>
    <fullName>optOutDm_St__c</fullName>
    <defaultValue>false</defaultValue>
    <label>スチールDM拒否</label>
    <type>Checkbox</type>
</CustomField>