force-app/main/default/objects/Contact/fields/optOutMail_Cs__c.field-meta.xml
<CustomField>
    <fullName>optOutMail_Cs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSメール拒否</label>
    <type>Checkbox</type>
</CustomField>