force-app/main/default/objects/Contact/fields/optOutMail_En__c.field-meta.xml
<CustomField>
    <fullName>optOutMail_En__c</fullName>
    <defaultValue>false</defaultValue>
    <label>エンジメール拒否</label>
    <type>Checkbox</type>
</CustomField>