force-app/main/default/objects/Contact/fields/optOutMail_Ju__c.field-meta.xml
<CustomField>
    <fullName>optOutMail_Ju__c</fullName>
    <defaultValue>false</defaultValue>
    <label>住環境メール拒否</label>
    <type>Checkbox</type>
</CustomField>