force-app/main/default/objects/Contact/fields/optOutMail_Sl__c.field-meta.xml
<CustomField>
    <fullName>optOutMail_Sl__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ソリューション営業課メール拒否</label>
    <type>Checkbox</type>
</CustomField>