force-app/main/default/objects/Contact/fields/optOutMail_St__c.field-meta.xml
<CustomField>
    <fullName>optOutMail_St__c</fullName>
    <defaultValue>false</defaultValue>
    <label>スチールメール拒否</label>
    <type>Checkbox</type>
</CustomField>