force-app/main/default/objects/Contact/fields/optOutSales_En__c.field-meta.xml
<CustomField>
    <fullName>optOutSales_En__c</fullName>
    <defaultValue>false</defaultValue>
    <label>エンジ営業拒否</label>
    <type>Checkbox</type>
</CustomField>