force-app/main/default/objects/Contact/fields/optOutSales_Sl__c.field-meta.xml
<CustomField>
    <fullName>optOutSales_Sl__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ソリューション営業課営業拒否</label>
    <type>Checkbox</type>
</CustomField>