force-app/main/default/objects/Contact/fields/OrderBy__c.field-meta.xml
<CustomField>
    <fullName>OrderBy__c</fullName>
    <label>並び順</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>