force-app/main/default/objects/Contact/fields/PastDepartment__c.field-meta.xml
<CustomField>
    <fullName>PastDepartment__c</fullName>
    <inlineHelpText>（中途の場合は）前職の会社名</inlineHelpText>
    <label>過去所属部署</label>
    <type>TextArea</type>
</CustomField>