force-app/main/default/objects/Contact/fields/PathLightKeyman__c.field-meta.xml
<CustomField>
    <fullName>PathLightKeyman__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PathLightキーマン</label>
    <type>Checkbox</type>
</CustomField>