force-app/main/default/objects/Contact/fields/RelationshipDegree__c.field-meta.xml
<CustomField>
    <fullName>RelationshipDegree__c</fullName>
    <label>関係構築度</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>初期レベル</fullName>
            </value>
            <value>
                <fullName>中期レベル</fullName>
            </value>
            <value>
                <fullName>後期レベル</fullName>
            </value>
            <value>
                <fullName>Lv1</fullName>
            </value>
            <value>
                <fullName>Lv2</fullName>
            </value>
            <value>
                <fullName>Lv3</fullName>
            </value>
            <value>
                <fullName>Lv4</fullName>
            </value>
            <value>
                <fullName>Lv5</fullName>
            </value>
            <value>
                <fullName>Lv6</fullName>
            </value>
            <value>
                <fullName>Lv10</fullName>
                <isActive>false</isActive>
                <label>Lv10</label>
            </value>
            <value>
                <fullName>Lv9</fullName>
                <isActive>false</isActive>
                <label>Lv9</label>
            </value>
            <value>
                <fullName>★</fullName>
                <isActive>false</isActive>
                <label>★</label>
            </value>
            <value>
                <fullName>★★</fullName>
                <isActive>false</isActive>
                <label>★★</label>
            </value>
            <value>
                <fullName>★★★</fullName>
                <isActive>false</isActive>
                <label>★★★</label>
            </value>
            <value>
                <fullName>★★★★</fullName>
                <isActive>false</isActive>
                <label>★★★★</label>
            </value>
            <value>
                <fullName>★★★★★</fullName>
                <isActive>false</isActive>
                <label>★★★★★</label>
            </value>
            <value>
                <fullName>関係構築完了レベル</fullName>
                <isActive>false</isActive>
                <label>関係構築完了レベル</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>