force-app/main/default/objects/Contact/fields/RetirementDate__c.field-meta.xml
<CustomField>
    <fullName>RetirementDate__c</fullName>
    <label>異動・退職日</label>
    <type>DateTime</type>
</CustomField>