force-app/main/default/objects/Contact/fields/RetirementFlg__c.field-meta.xml
<CustomField>
    <fullName>RetirementFlg__c</fullName>
    <label>退職フラグ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>異動</fullName>
            </value>
            <value>
                <fullName>退職</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>