force-app/main/default/objects/Contact/fields/seimei__c.field-meta.xml
<CustomField>
    <fullName>seimei__c</fullName>
    <formula>LastName  + &quot; &quot; +  FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>姓名</label>
    <type>Text</type>
</CustomField>