force-app/main/default/objects/Contact/fields/sendanEmail__c.field-meta.xml
<CustomField>
    <fullName>sendanEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>メール送信可</label>
    <type>Checkbox</type>
</CustomField>