force-app/main/default/objects/Contact/fields/Situation__c.field-meta.xml
<CustomField>
    <fullName>Situation__c</fullName>
    <label>状況</label>
    <type>TextArea</type>
</CustomField>