force-app/main/default/objects/Contact/fields/skkkkgogheiw__c.field-meta.xml
<CustomField>
    <fullName>skkkkgogheiw__c</fullName>
    <label>SL得意先担当者突合用</label>
    <length>255</length>
    <type>Text</type>
</CustomField>