force-app/main/default/objects/Contact/fields/SL_about_Axcis_EnterDate__c.field-meta.xml
<CustomField>
    <fullName>SL_about_Axcis_EnterDate__c</fullName>
    <label>SL_Axcisについて_入力日</label>
    <type>Date</type>
</CustomField>