force-app/main/default/objects/Contact/fields/SL_about_Pro2__c.field-meta.xml
<CustomField>
    <fullName>SL_about_Pro2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SL_Pro2カメラについて</label>
    <type>Checkbox</type>
</CustomField>