force-app/main/default/objects/Contact/fields/SL_about_Scan_to_BIM_Stages_SIM_ON_Enter__c.field-meta.xml
<CustomField>
    <fullName>SL_about_Scan_to_BIM_Stages_SIM_ON_Enter__c</fullName>
    <label>SL_Scan to BIM/Stages/SIM-ONについて_入力日</label>
    <type>Date</type>
</CustomField>