force-app/main/default/objects/Contact/fields/SL_bussinesplan__c.field-meta.xml
<CustomField>
    <fullName>SL_bussinesplan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SL_ビジネスプラン (100～300アクティブスペース / 50ユーザー)</label>
    <type>Checkbox</type>
</CustomField>