force-app/main/default/objects/Contact/fields/SL_Category__c.field-meta.xml
<CustomField>
    <fullName>SL_Category__c</fullName>
    <label>SL_Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SL_Category</valueSetName>
    </valueSet>
</CustomField>