force-app/main/default/objects/Contact/fields/SL_Category_indusutory__c.field-meta.xml
<CustomField>
    <fullName>SL_Category_indusutory__c</fullName>
    <label>SL_業種</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>建設業</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>