force-app/main/default/objects/Contact/fields/SL_contactnumber__c.field-meta.xml
<CustomField>
    <fullName>SL_contactnumber__c</fullName>
    <label>SL_contactnumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>