force-app/main/default/objects/Contact/fields/SL_demo__c.field-meta.xml
<CustomField>
    <fullName>SL_demo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>実機デモ会希望</label>
    <type>Checkbox</type>
</CustomField>