force-app/main/default/objects/Contact/fields/SL_Description__c.field-meta.xml
<CustomField>
    <fullName>SL_Description__c</fullName>
    <label>SL_備考</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>