force-app/main/default/objects/Contact/fields/SL_FirstContact_Detail__c.field-meta.xml
<CustomField>
    <fullName>SL_FirstContact_Detail__c</fullName>
    <label>初回接点_問い合わせ内容</label>
    <length>255</length>
    <type>Text</type>
</CustomField>