force-app/main/default/objects/Contact/fields/SL_firstsource__c.field-meta.xml
<CustomField>
    <fullName>SL_firstsource__c</fullName>
    <label>SL_初回ソース</label>
    <length>255</length>
    <type>Text</type>
</CustomField>