force-app/main/default/objects/Contact/fields/SL_Leica_BLK360_G1__c.field-meta.xml
<CustomField>
    <fullName>SL_Leica_BLK360_G1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SL_【レンタル】Leica BLK360 G1(三脚・雲台・キャリーバッグ付き</label>
    <type>Checkbox</type>
</CustomField>