force-app/main/default/objects/Contact/fields/SL_others__c.field-meta.xml
<CustomField>
    <fullName>SL_others__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SL_その他</label>
    <type>Checkbox</type>
</CustomField>