force-app/main/default/objects/Contact/fields/SL_OwnerId__c.field-meta.xml
<CustomField>
    <fullName>SL_OwnerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>得意先担当者 所有者_SL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SL_contact_OwnerId</relationshipName>
    <type>Lookup</type>
</CustomField>