force-app/main/default/objects/Contact/fields/SL_Pro2_DS_30__c.field-meta.xml
<CustomField>
    <fullName>SL_Pro2_DS_30__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SL_Pro2用雲台 (スリック / DS-30)</label>
    <type>Checkbox</type>
</CustomField>