force-app/main/default/objects/Contact/fields/SL_Pro2_starterkit__c.field-meta.xml
<CustomField>
    <fullName>SL_Pro2_starterkit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SL_Pro2用スターターキット (三脚・雲台・キャリーケース)</label>
    <type>Checkbox</type>
</CustomField>