force-app/main/default/objects/Contact/fields/SL_seminar_newsletter__c.field-meta.xml
<CustomField>
    <fullName>SL_seminar_newsletter__c</fullName>
    <label>SL_セミナー情報・ニュースレター配信</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>希望する</fullName>
            </value>
            <value>
                <fullName>希望しない</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>