force-app/main/default/objects/Contact/fields/SL_source_request_documents__c.field-meta.xml
<CustomField>
    <fullName>SL_source_request_documents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SL_ソース_資料請求</label>
    <type>Checkbox</type>
</CustomField>