force-app/main/default/objects/Contact/fields/SL_source_syoukai__c.field-meta.xml
<CustomField>
    <fullName>SL_source_syoukai__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SL_ソース_紹介</label>
    <type>Checkbox</type>
</CustomField>