force-app/main/default/objects/Contact/fields/sourceB_BuildApp__c.field-meta.xml
<CustomField>
    <fullName>sourceB_BuildApp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>野原産業セメント入手（BuildApp）</label>
    <type>Checkbox</type>
</CustomField>