force-app/main/default/objects/Contact/fields/sourceC_BuildApp__c.field-meta.xml
<CustomField>
    <fullName>sourceC_BuildApp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C：ノハラスチール入手（BuildApp）</label>
    <type>Checkbox</type>
</CustomField>